@@ -6,6 +6,8 @@ lldpd (0.9.8)
       devices may still use the previous method.
     + Don't run ethtool as root. Kernels older than 2.6.19 won't get
       link information anymore.
+    + Add "configure system hostname ." option to not use a FQDN
+      for system name.
   * Fixes:
     + Handle team interfaces like a bond. Real MAC address cannot be
       retrieved yet.
